Fixed bug: Story cutoff

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@
     --main-tertiary: rgb(61, 236, 61);
     --main-quadrary: rgb(238, 46, 238);
 
-    /* --main-primary-light: rgb(33, 31, 31);
-    --main-primary-dark: #ffffff; */
 }
 
 html, body {
@@ -19,7 +17,7 @@ html, body {
   overflow-y: hidden;
   width: 100%;
   height: 100%;
-  color: var(--main-primary-dark);
+  color: black;
   margin: 0;
   border-bottom: 2px solid black;
 }
@@ -297,10 +295,8 @@ a{
     justify-items: flex-start;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-top: 10px;
-    gap: 20px;
     scrollbar-width: none;
-    height: 100%;
+    height: 120%;
     width: 100vw;
     background-color: inherit;
     font-family: Arial, Helvetica, sans-serif;
@@ -398,8 +394,9 @@ body.dark-mode {
     text-decoration: none;
     align-items: center;
     gap: 10px;
-    height: 80%;
+    height: 70%;
     width: 100%;
+    padding-top: 20px;
     max-width: 500px;
     color: inherit;
 }
@@ -530,6 +527,7 @@ body.dark-mode {
     justify-content: flex-start;
     height: 100%;
     width: 100%;
+    color: inherit;
     max-width: 700px;
     padding-top: 10%;
     padding-bottom: 10%;
